2008-02-08
* Count query now uses the :from find option, if specified. Thanks to Rich Wertz.

2007-11-13
* Removed extraneous statement from collect_count_options. Thanks to Wolfgang Postler.

2007-9-14
* Count query now respects the distinct keyword if it is included in the :select option.  Thanks to Luke Pearce.

2007-8-25
* PagingEnumerator#each now returns self.  Thanks to Takeru Sasaki.
* Addeed #to_xml to the PagingEnumerator.

2007-8-24
* No longer overwrite the AR #validate_find_options method. Instead just append :page to VALID_FIND_OPTIONS. Thanks for the suggestion Pratik.

2007-7-24
* Fixed a bug in handling the HAVING having clause. Thanks to Daniel Aborg for the patch!
* Added support for Array#extract_options! added to Rails edge (9087).  Thanks to Alex Payne!
* Tests no longer use with_scope since it became protected in Rails edge.

2007-5-7
* Now uses alias_method_chain. Thanks to Jeremy Larkin for the patch.

2007-4-27
* PagingEnumerator now supports Marshal.dump and Marshal.load. When marshaled, the enumerator loses its callback, so :auto => true is not supported in this scenario.

2007-02-05
* :current < 1 is now gracefully handled.  Thanks again to Benjamin Curtis and 21st Century Music.

2007-01-24
* Added paging_helper that provides paginating_links and paginating_links_each to ActionView::Base. Special thanks to Benjamin Curtis and 21st Century Music (http://21cmusic.com/)!

2007-01-07
* :first now defaults to 1 rather than the value of :page. Thanks to Jack Baty for bringing this to my attention.

2006-12-28
* primary_key used to build count select statement rather than "id" column. Thanks to Rich Cox.

2006-12-21
* Applied another fix to counting with :group option. Special thanks to Ben Weiner.
* Placed tests for grouping in a separate class.

2006-12-12
* Removed rails from vendor directory.

2006-11-27